<resources>
    <string name="app_name">Snake Game</string>
    <string name="home_btn_play">Play</string>
    <string name="home_btn_score">Ranking</string>
    <string name="home_btn_exit">Quit</string>
    <string name="table_name">User Name</string>
    <string name="table_apple">Apples Eaten</string>
    <string name="end_x">x</string>
    <string name="end_btn_play">Play Again</string>
    <string name="end_btn_score">Ranking</string>
    <string name="home_btn_parameter">Parameters</string>
    <string name="parameter_speed_up">Speeding</string>
    <string name="parameter_num_apple">Apple at once</string>
    <string name="parameter_btn_save">Save</string>
    <string name="end_game_title">Lost !</string>
    <string name="end_game_hint">Your name</string>
    <string name="end_game_guest">Guest</string>
    <string name="parameter_save_message">Your settings have been successfully saved</string>
    <string name="parameter_save_error">Error</string>
    <string name="save_game_error">The name must be between 0 and 12 characters</string>
</resources>